fixed issue on small screens

--- a/styles.css
+++ b/styles.css
@@ -81,6 +81,24 @@
   font-size: 2em;
 }
 
+@media screen and (max-height: 700px) {
+  .title-header {
+    margin-top: 25%;
+  }
+
+  .title-header-main {
+    font-size: 3.25em;
+  }
+
+  .title-header-location {
+    font-size: 1.5em;
+  }
+
+  .title-header-sub {
+    font-size: 1.5em;
+  }
+}
+
 /* Info */
 #info {
   margin: 5em 2em;
@@ -89,6 +107,7 @@
 .info-intro {
   font-family: 'Amiri', serif;
   font-weight: 600;
+  text-align: center;
 }
 
 .office {
@@ -106,10 +125,12 @@
 }
 
 .info-line {
-  width: 100px;
   margin: 1.2em 0 2em 0;
+  width: 100px;
   border-width: 30px;
   border-top: 2px black solid;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 @media screen and (min-width: 600px) {
